--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,10 @@ filelock==3.13.1
 fonttools==4.49.0
 fsspec==2024.2.0
 h5py==3.10.0
+imageio==2.34.0
+imageio-ffmpeg==0.4.9
 Jinja2==3.1.3
+joblib==1.3.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.5
 matplotlib==3.8.3
@@ -13,11 +16,19 @@ mpmath==1.3.0
 networkx==3.2.1
 numpy==1.26.4
 packaging==23.2
+pandas==2.2.1
 pillow==10.2.0
+psutil==5.9.8
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+pytz==2024.1
+scikit-learn==1.4.1.post1
+scipy==1.12.0
+seaborn==0.13.2
 six==1.16.0
 sympy==1.12
+threadpoolctl==3.3.0
 torch==2.2.1
 tqdm==4.66.2
 typing_extensions==4.10.0
+tzdata==2024.1
